<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>io.avaje</groupId>
    <artifactId>avaje-nima-parent</artifactId>
    <version>0.1</version>
  </parent>

  <artifactId>test-avaje-nima</artifactId>

  <properties>
    <!--    <java.release>19</java.release>-->
    <!--    <maven.compiler.source>19</maven.compiler.source>-->
    <!--    <maven.compiler.target>19</maven.compiler.target>-->
    <!--    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
    <surefire.useModulePath>false</surefire.useModulePath>
    <record.builder.version>37</record.builder.version>
  </properties>


  <dependencies>

    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-metrics</artifactId>
      <version>9.2-RC2</version>
    </dependency>

    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-nima</artifactId>
      <version>0.1</version>
    </dependency>

    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-record-builder</artifactId>
      <version>1.0-RC1</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-nima-test</artifactId>
      <version>0.1</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>junit</artifactId>
      <version>1.1</version>
      <scope>test</scope>
    </dependency>

  </dependencies>


  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <release>21</release>
          <annotationProcessorPaths>
            <path>
              <groupId>io.avaje</groupId>
              <artifactId>avaje-nima-generator</artifactId>
              <version>0.1</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>

      <plugin>
        <groupId>io.avaje</groupId>
        <artifactId>avaje-inject-maven-plugin</artifactId>
        <version>1.2</version>
        <executions>
          <execution>
            <phase>process-sources</phase>
            <goals>
              <goal>provides</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0</version>
        <configuration>
          <argLine>--enable-preview</argLine>
        </configuration>
      </plugin>

      <plugin>
        <groupId>io.repaint.maven</groupId>
        <artifactId>tiles-maven-plugin</artifactId>
        <version>2.34</version>
        <extensions>true</extensions>
        <configuration>
          <tiles>
            <tile>io.avaje.tile:metrics-enhance:9.0-RC4</tile>
            <tile>io.ebean.tile:enhancement:13.17.1</tile>
          </tiles>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
